--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parkinggarage",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Parking Garage Simulator",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "brain.js": "^2.0.0-beta.23",
+    "nanoid": "^4.0.2",
+    "pathfinding": "^0.4.18",
     "readline-sync": "^1.4.10"
   }
 }
